[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Face.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[sub_resource type="CircleShape2D" id=2]
radius = 87.0057

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EatTimer" type="Timer" parent="."]

[node name="ThrowTimer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -27.0
margin_top = -29.0
margin_right = 27.0
margin_bottom = -15.0
max_value = 200.0
step = 1.0

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="vision"]
shape = SubResource( 2 )

[connection signal="timeout" from="EatTimer" to="." method="_on_EatTimer_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
